@@ -1,0 +1,3 @@
+#!/usr/bin/env python
+from clnews.scripts.clnews import main
+main()
