@@ -1,0 +1,12 @@
+"""
+.. module:: main
+   :platform: Unix
+      :synopsis: This is the entry point of the app
+
+      .. moduleauthor:: Alexandros Ntavelos <a.ntavelos@gmail.com>
+
+      """
+from shell import main
+
+if __name__ == '__main__':
+    main()
