@@ -1,5 +1,4 @@
-
-VERSION = "0.3.1"
+VERSION = "0.4.0"
 
 CHANNELS = {
     "cnn": {
