@@ -1,0 +1,7 @@
+"""
+Implementation of the command-line clnews tool.
+"""
+from __future__ import absolute_import
+
+# For backward compatibility
+from clnews.shell import main
