@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>CLNews 0.3.1 &mdash; CLNews 0.1.0 documentation</title>
+    <title>CLNews 0.4.0 &mdash; CLNews 0.1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -44,8 +44,8 @@
         <div class="bodywrapper">
           <div class="body" role="main">
             
-  <div class="section" id="clnews-0-3-1">
-<h1>CLNews 0.3.1<a class="headerlink" href="#clnews-0-3-1" title="Permalink to this headline">¶</a></h1>
+  <div class="section" id="clnews-0-4-0">
+<h1>CLNews 0.4.0<a class="headerlink" href="#clnews-0-4-0" title="Permalink to this headline">¶</a></h1>
 <p>Contents:</p>
 <div class="toctree-wrapper compound">
 <ul class="simple">
@@ -74,7 +74,7 @@ parent class.</p>
 <p>Retrieves the events for the given channel.</p>
 <dl class="docutils">
 <dt>Raises:</dt>
-<dd>ShellCommandExecutionError: An error occured when the event 
+<dd>ShellCommandExecutionError: An error occured when the event
 retrieval fails.</dd>
 </dl>
 </dd></dl>
@@ -236,7 +236,7 @@ initialization</p>
         <div class="sphinxsidebarwrapper">
   <h3><a href="#">Table Of Contents</a></h3>
   <ul>
-<li><a class="reference internal" href="#">CLNews 0.3.1</a></li>
+<li><a class="reference internal" href="#">CLNews 0.4.0</a></li>
 <li><a class="reference internal" href="#module-clnews.shell">shell</a></li>
 <li><a class="reference internal" href="#module-clnews.news">news</a></li>
 <li><a class="reference internal" href="#module-clnews.exception">exceptions</a></li>
