@@ -3,3 +3,4 @@ v<0.2.0>, <20141227> -- Apply 'less' style output of the events
 v<0.2.1>, <20141227> -- Apply 'less' style output of the channels' list 
 v<0.3.1>, <20141227> -- Implement command cache using up and down arrow keys
                         Bug fix for wrong commands
+v<0.4.0>, <20150110> -- Create entry point of the app
